--- a/style.css
+++ b/style.css
@@ -74,6 +74,38 @@ img{
   height: 50px;
 }
 
+.footer{
+  height: 300px;
+}
+
+.icons{
+  display: flex;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  }
+
+
+.icons li{ 
+  margin: 10px;
+  padding: 5px;
+  font-size: 30px;
+  width: 50px;
+  transition: -0.5s;
+  background-color: white;
+  
+}
+
+.icons li:nth-child(1){
+background-color: #3b5999;
+}
+
+.icons li:hover{
+  transform: translateY(-8px);
+  box-shadow: 0 10px 10px rgba(255, 255, 255, .2);
+}
 
 
 
