--- a/style.css
+++ b/style.css
@@ -7,25 +7,26 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  }
+}
 
-  h1{
+  h1, h2{
     color: #e68610;
     font-weight: 700;
-  }
+}
 
-  h2{
+  .titre{
     color: #e68610;
     font-weight: 700;
-  }
-  
+    font-size: 50px;
+}
+ 
 
 .présentation, .asso{
   margin-bottom: 10px;
   margin-top: 10px;
   font-size: 18px;
   font-family:'Times New Roman', Times, serif;
-  } 
+} 
   
 body{
   background-color:#e1e2e8;
@@ -37,12 +38,12 @@ body{
   flex-direction: row;
   justify-content: center;
   background-color: #d0d3e2;
-    }
+}
 
 img{
   max-width: 100%;
   max-height: 1000px;
-  }
+}
 
 @media screen and (max-width: 768px){
   .card-body, .card{
@@ -85,7 +86,7 @@ img{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  }
+}
 
 
 .icons li{ 
@@ -99,27 +100,34 @@ img{
 }
 
 .icons li:nth-child(1){
-background-color: #3B5998;
+  background-color: #3B5998;
 }
 
 .icons li:nth-child(2){
   background-color: #1DA1F2;
-  }
+}
 
-  .icons li:nth-child(3){
-    background-color: #007BB5;
-    }
+.icons li:nth-child(3){
+  background-color: #007BB5;
+}
 
-    .icons li:nth-child(4){
-      background-color: #C32AA3;
+.icons li:nth-child(4){
+  background-color: #C32AA3;
   
-      }  
-
+}  
 
 .icons li:hover{
   transform: translateY(-8px);
   box-shadow: 0 10px 10px rgba(255, 255, 255, .2);
 }
+
+.evenement{
+  background-color: rgb(168, 168, 189);
+  padding: 3;
+ 
+}
+
+
 
 
 
