--- a/style.css
+++ b/style.css
@@ -9,15 +9,20 @@
   justify-content: center;
 }
 
-  h1, h2{
-    color: #e68610;
-    font-weight: 700;
+h1{
+  color: white;
+  font-weight: 700;
 }
 
-  .titre{
-    color: #e68610;
-    font-weight: 700;
-    font-size: 50px;
+h2{
+  color :rgb(219, 159, 46);
+  font-weight: 700;
+}
+
+.titre{
+  color: #cf7d1e;
+  font-weight: 700;
+  font-size: 50px;
 }
  
 
@@ -62,7 +67,7 @@ img{
   vertical-align: middle;
   left: 0;
   right: 0;
-  top:50%;
+  top: 50%;
   color:rgb(34, 13, 61);
   font-size: 30px;
 }
@@ -125,11 +130,23 @@ img{
 .evenement{
   background-color: rgb(168, 168, 189);
   padding: 3;
- 
+  margin: 3;
+   
 }
 
+aside{
+  display: flex;
+  text-align: center;
+}
 
+.card:hover{
+  transform: scale(1.2);
+  z-index: 2;
+}
 
+h2:hover{
+  color:crimson;
+}
 
 
  
