--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
    }
 
 .pmains img{
-  object-fit: cover;
+  object-fit: contain;
 }
   
 
@@ -49,10 +49,6 @@ body{
   background-color: #d0d3e2;
 }
 
-img{
-  max-width: 100%;
-  max-height: 1000px;
-}
 
 @media screen and (max-width: 768px){
   .card-body, .card{
@@ -60,7 +56,8 @@ img{
     height: auto;
   }
   .logo{
-    width:80%;
+  width: 80%;
+  
   }
 
 }
@@ -151,7 +148,9 @@ h2:hover{
   color:crimson;
 }
 
-
+img{
+  max-width: 100%;
+}
  
 
 
