--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h2{
 .titre{
   color: #cf7d1e;
   font-weight: 700;
-  font-size: 50px;
+  font-size: 40px;
 }
  
 
@@ -56,9 +56,8 @@ body{
     height: auto;
   }
   .logo{
-  width: 80%;
-  
-  }
+  width: 90%;
+    }
 
 }
 
@@ -77,7 +76,7 @@ body{
 }
 
 .nav{
-  height: 50px;
+  height: 100px;
 }
 
 .footer{
@@ -151,9 +150,13 @@ h2:hover{
 img{
   max-width: 100%;
 }
- 
 
-
+@media screen and (max-width: 360px){
+  .pmains{
+    max-width: 360px;
+    height: auto;
+  }
+}
 
  
 
